[package]
name = "config_watcher"
version = "0.10.1"
edition = "2021"
publish = true
description = "Config Watcher is a Rust library for tracking configuration items from files, Kubernetes ConfigMaps, and MQTT topics, providing real-time updates and structured data parsing."
repository = "https://github.com/schaze/config_watcher"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["config", "file", "mqtt", "kubernetes"]

[features]
default = ["tls-aws-lc-rs"]
# Default TLS backend (forwarded into kube)
tls-aws-lc-rs = ["kube/aws-lc-rs"]

[dependencies]
glob = "0.3.2"
log = "0.4.22"
notify = "8.0.0"
thiserror = "2.0.9"
tokio = {version = "1.42.0", features = ["fs", "io-std", "io-util", "sync", "rt", "rt-multi-thread", "macros"]}
twox-hash = "2.1.0"
walkdir = "2.5.0"
kube = { version = "2.0.0", features=["runtime", "derive" ] }
k8s-openapi = { version = "0.26.0", features = [ "v1_30"] }
futures = "0.3.31"
futures-stream-ext = "0.5.0"
rumqttc = "0.25.0"
